# TCPEncryptedServer

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  private.pem  public.pem
include/: cipher.h
src/: base64.cpp  cipher.cpp
